# PROJET_LP25

./: CMakeLists.txt  Makefile  configuration.c  configuration.h  defines.c  defines.h  file-properties.c  file-properties.h  files-list.c  files-list.h  main(bis).c  main.c  messages.c  messages.h  processes.c  processes.h  rapport  rapport LP25.odt  sync.c  sync.h  utility.c  utility.h
